@@ -1,0 +1,13 @@
+---
+elements:
+    - type: Select
+      name: foo
+      options:
+        - [1, One]
+        - [2, Two]
+    
+    - type: Select
+      name: foo
+      options:
+        - [1, One]
+        - [2, Two]
