@@ -3,6 +3,9 @@
     - Date element, year menu now supports 'reverse' option to reverse order
       of year list. - patch from Ozum Eldogan.
 
+    - Bugfix: after submission, group-type fields were getting the wrong value
+      when multiple fields had the same name. - patch by Doug Orleans.
+
     - Performance fix: change all uses of eval() to check for array/hash-refs
       to Scalar::Util::reftype() instead. - Was causing a hit for group-type
       fields with large numbers of options. - initial patch by Steve Nolte.
